# aoc-2024

./: .gitignore  Cargo.toml  LICENSE
benches/: dec6_benchmark.rs
src/: main.rs
src/dec1/: mod.rs
src/dec10/: Readme.md  mod.rs
src/dec11/: Readme.md  mod.rs
src/dec12/: Readme.md  mod.rs
src/dec13/: Readme.md  mod.rs
src/dec14/: Readme.md  mod.rs
src/dec14/outputs/: 7774.txt
src/dec15/: Readme.md  mod.rs
src/dec16/: Readme.md  mod.rs
src/dec2/: mod.rs
src/dec3/: Readme.md  mod.rs
src/dec4/: Readme.md  mod.rs
src/dec5/: Readme.md  mod.rs
src/dec6/: Readme.md  mod.rs
src/dec7/: Readme.md  mod.rs
src/dec8/: Readme.md  mod.rs
src/dec9/: Readme.md  mod.rs
