[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.94"
derive_more = { version = "1.0.0", features = ["add"] }
fxhash = "0.2.1"
gxhash = "3.4.1"
itertools = "0.13.0"
num-integer = "0.1.46"
rayon = "1.10.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dec6_benchmark"
harness = false
